add tests to prevent changing role type to DEFAULT under various conditions